many styling changes, including project page, updated tech colors, various css improvements. continuing work on the overflow issue for the css page

--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body {
     overflow-x: hidden;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 a:visited { 
     text-decoration: none; 
     color: black; 
@@ -240,9 +245,23 @@ a:visited {
     margin-left: -30px;
 }
 
+#toplist2 li {
+    background: #04c2c9;
+    padding: 5px;
+    border-radius: 20%;
+    margin-right: 10px;
+}
+
 #botlist2 {
     display: flex;
     flex-direction: column;
+}
+
+#botlist2 li {
+    background: #04c2c9;
+    padding: 5px;
+    border-radius: 35%;
+    margin-left: 10px;
 }
 
 .tech {
@@ -260,6 +279,7 @@ a:visited {
 .listicon {
     margin-bottom: 10px;
     margin-top: 10px;
+    color: white;
 }
 
 #projectpage {
@@ -295,7 +315,7 @@ a:visited {
     display: flex;
     justify-content: center;
     /* border: 1px solid yellow; */
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     margin-right: 50px;
     margin-top: -5px;
     list-style: none;
@@ -306,9 +326,13 @@ a:visited {
 }
 
 .project-filter li {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     margin: 10px;
-    padding: 5px 20px;
-    color: grey;
+    padding: 20px;
+    width: 100px;
     font-size: 1rem;
     letter-spacing: 0.5px;
     font-weight: 400;
@@ -318,8 +342,9 @@ a:visited {
 }
 
 .project-filter-active {
-    background-color: #f0f0f0;
-    color: #272727;
+    background-color: #e31b6d;
+    color: white;
+    transition: 0.3s;
 }
 
 .project-container {
@@ -343,18 +368,52 @@ a:visited {
     border-radius: 5px;
 }
 
-.overlay {
-    position: fixed; /* Sit on top of the page content */
-    display: none; /* Hidden by default */
-    width: 100%; /* Full width (cover the whole page) */
-    height: 100%; /* Full height (cover the whole page) */
+.projectCard {
+    /* background: red; */
+    position: relative;
+    margin: 20px;
+}
+
+.content {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0,0,0,0.5); /* Black background with opacity */
-    z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer; /* Add a pointer on hover */
+    height: 100%;
+    width: 100%;
+    background: lightgrey;
+    font-size: 11pt;
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.content:hover {
+    transition: 0.3s;
+    opacity: 1;
+}
+
+.wordContent {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    line-height: 1px;
+
+}
+
+.learnButton {
+    border: 1px solid #e31b6d;
+    padding: 12px;
+}
+
+.learnButton:hover {
+    color: white;
+    background: #e31b6d;
+    transition: 0.3s;
 }
 
 #contactbar {
@@ -381,6 +440,11 @@ a:visited {
     color: black;
     width: 250px;
     /* background: blue; */
+}
+
+#iconcont i:hover {
+    color: white;
+    transition: 0.5s;
 }
 
 .pageheader {
